--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -65,11 +65,12 @@ a {
 }
 
 .hero-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: relative;
     background-color: #e6f0ff;
     height: calc(100vh - 90px);
-    display: flex;
-    flex-direction: column;
 }
 
 .navbar {
@@ -110,15 +111,11 @@ a {
     margin-left: auto;
 }
 
-.hero {
-    margin-top: 130px;
-}
-
-.hero .info {
+.hero-wrap .info {
     width: 51%;
 }
 
-.hero .sub-title {
+.hero-wrap .sub-title {
     font-size: 1.8rem;
     font-weight: 500;
     line-height: 1.5;
@@ -126,7 +123,7 @@ a {
     color: #687690;
 }
 
-.hero .title {
+.hero-wrap .title {
     font-size: 6.4rem;
     font-weight: 700;
     line-height: 1.19;
@@ -134,7 +131,7 @@ a {
     margin-top: 8px;
 }
 
-.hero .desc {
+.hero-wrap .desc {
     font-size: 1.8rem;
     font-weight: 400;
     line-height: 1.78;
